@@ -29,3 +29,10 @@ describe "BOOL Type Encoding" do
     obj.returnBool.should == true
   end
 end
+
+describe "Void-pointers" do
+  it "does not try to convert an object with a type of `void *`" do
+    obj = Object.new
+    TestVoidPointer.methodWithVoidPointer(obj).should == obj
+  end
+end
